--- a/static/swcs/style.css
+++ b/static/swcs/style.css
@@ -36,17 +36,15 @@
 .roller-span {
     position: relative;
     height: 70px;
+    text-align: center;
 }
 
 .response-text{
-    /* position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%); */
     white-space: pre-line;
-    z-index: 12;
     text-align: center;
-    font-size: 60%;
+    line-height: 35px;
+    z-index: 12;    
+    font-size: 100%;
     font-family: 'EotE Symbol';
 }
 
@@ -78,4 +76,8 @@
     width: 520px;
     /* justify-content: center;
     align-items: center; */
+}
+
+.setback-die {
+    color:white;
 }
