--- a/frogknight-web/static/core/base.css
+++ b/frogknight-web/static/core/base.css
@@ -26,11 +26,12 @@ nav ul{
     /* margin: auto;   */
     /* width: 600px;  */
     display: block; 
-    padding-right: 1%;
+    /* padding-right: 2%; */
 } 
     
 nav ul li{ 
     display:  inline-block; 
+    padding-right: .7%;
     /* min-width: 190px; 
     width: 190px;  */
 } 
@@ -39,13 +40,33 @@ body {
     padding-top: 10px;
 }
 
-/* nav{
-    background-color: rgb(155,160,168);
+.account-form {
+    float: right;
+    width: 400px;
+    height: max-content;
+    padding: 2%;
+    border-bottom-left-radius: 17%;
+}
+form li {
+    /* display:list-item; */
+    list-style: none;
+    display:block;
 }
 
 button {
-    background-color: (62,115,174);
-} */
+    border-style: hidden;
+    border-radius: 10%;
+} 
+
+.helptext {
+    display: none;
+}
+
+.manual-helptext{
+    font-size: smaller;
+    font-style: italic;
+}
+  
 /* attack of the clones colors
 Black
 rgb(55,54,57)     grey
