--- a/static/swcs/style.css
+++ b/static/swcs/style.css
@@ -30,7 +30,7 @@
 
 #dice-roller-buttons {
     width: 100%;
-    height: 80px;
+    height: 60px;
 }
 
 .roller-span {
@@ -41,23 +41,24 @@
 
 .response-text{
     /* color:black; */
-    white-space: pre-line;
+    /* white-space: pre; */
     text-align: center;
     line-height: 35px;
-    z-index: 12;    
+    /* z-index: 12;     */
+    transform: translateZ(1000px);
     font-size: 100%;
     font-family: 'EotE Symbol';
 
 }
 
 .small-dice {
-    z-index: -1;
-    height: 50px;
-    width: 50px;
+    /* z-index: -1; */
+    height: 60px;
+    width: 60px;
     position: absolute;
     left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) translateZ(1000px);
     filter: drop-shadow(2px 2px 2px black);
 }
 
@@ -65,6 +66,9 @@
     display: grid;
     grid-gap: 5px;
     grid-template-columns: repeat(auto-fill, 60px);
+    transform-style: preserve-3d;
+    /* border-radius: 10%;
+    border-style: solid; */
 }
 #dice-roller {
     width: 520px;
@@ -75,5 +79,11 @@
 }
 
 .single-die {
-    font-size: 200%;
+    font-size: 140%;
+    line-height: 22px;
 }
+
+/* .square-die {
+    font-size: 81%;
+    line-height: 41px;
+} */
