--- a/swcs/templates/swcs/roller.html
+++ b/swcs/templates/swcs/roller.html
@@ -1,8 +1,8 @@
-{% extends 'base.html' %}
+{% extends 'core/base.html' %}
 {% block content %}
 {% load static %}
 <link rel="stylesheet" href="{% static 'swcs/style.css' %}">
-<link rel="stylesheet" href="{% static 'theme.css' %}">
+<link rel="stylesheet" href="{% static 'core/theme.css' %}">
 <script type="text/javascript" charset="utf-8">
   var boost = "{% static 'swcs/boost.svg' %}";
   var ability = "{% static 'swcs/ability.svg' %}";
