--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -11,7 +11,7 @@
         <ul> 
             <li><a href="{% url 'core:index' %}">Home</a></li> 
             {% if user.is_authenticated %}
-            <li><a href="{% url 'swcs:sw-roller' %}">SW Dice Roller</a></li> 
+            <li><a href="{% url 'swcs:sw-index' %}">Star Wars</a></li> 
             <li><a href="{% url 'core:logout' %}"></li>Log Out</a></li>
             {% else %}
             <li><a href="{% url 'core:login' %}">Log In</a></li>
