--- a/frogknight-web/static/core/theme.css
+++ b/frogknight-web/static/core/theme.css
@@ -22,6 +22,10 @@ body {
   background-color: rgb(155,160,168);
 }
 
+select {
+  background-color: rgb(214,223,231);
+}
+
 .account-form-theme {
   background-color: rgb(214,223,231);
 }
