--- a/frogknight-web/static/swcs/style.css
+++ b/frogknight-web/static/swcs/style.css
@@ -66,6 +66,7 @@
     border-style: solid; */
 }
 #dice-roller {
+    padding-top: 10px;
     width: 520px;
 }
 
@@ -120,4 +121,10 @@
 .character-image {
     width: 100%;
     max-width: 200px;
+}
+
+.character-dropdown {
+    align-content: center;
+    padding-bottom: 2%;
+    border-radius: 15%;
 }
