--- a/frogknight-web/static/core/base.css
+++ b/frogknight-web/static/core/base.css
@@ -66,6 +66,10 @@ button {
     font-size: smaller;
     font-style: italic;
 }
+
+.card{
+    border-radius: 5%;
+}
   
 /* attack of the clones colors
 Black
