--- a/core/templates/registration/password_change_form.html
+++ b/core/templates/registration/password_change_form.html
@@ -1,9 +1,9 @@
-{% extends 'core/base.html' %}
-{% block title %}Login{% endblock %}
+{% extends "core/base.html" %}
+{% block title %}Login{% endblock title %}
 {% block content %}
 {% load static %}
-<link rel="stylesheet" href="{% static 'core/base.css' %}">
-<link rel="stylesheet" href="{% static 'core/theme.css' %}">
+<link rel="stylesheet" href="{% static 'core/base.css' %}"/>
+<link rel="stylesheet" href="{% static 'core/theme.css' %}"/>
 <div class="account-form account-form-theme">
     <h2>Change Password</h2>
     <table>
@@ -22,4 +22,4 @@
         </form>
     </table>
 </div>
-{% endblock %}
+{% endblock content %}
