--- a/swcs/templates/swcs/index.html
+++ b/swcs/templates/swcs/index.html
@@ -1,4 +1,4 @@
-{% extends 'core/base.html' %}
+{% extends "core/base.html" %}
 {% block content %}
 {% load static %}
 <nav>
@@ -8,4 +8,4 @@
         <li><a href="{% url 'swcs:sw-create_character' %}"></li>Create Character</a></li>
     </ul> 
 </nav>
-{% endblock %}
+{% endblock content %}
