--- a/core/templates/core/404.html
+++ b/core/templates/core/404.html
@@ -1,7 +1,7 @@
-{% extends 'core/base.html' %}
+{% extends "core/base.html" %}
 
-{% block title %}404{% endblock %}
+{% block title %}404{% endblock title %}
 
 {% block content %}
 <p>404 error :(</p>
-{% endblock %}
+{% endblock content %}
