--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,6 +1,6 @@
-{% extends 'core/base.html' %}
+{% extends "core/base.html" %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Home{% endblock title %}
 
 {% block content %}
 {% if user.is_authenticated %}
@@ -8,4 +8,4 @@
 {% else %}
   <p>You are not logged in</p>
 {% endif %}
-{% endblock %}
+{% endblock content %}
