--- a/swcs/templates/swcs/character.html
+++ b/swcs/templates/swcs/character.html
@@ -1,13 +1,34 @@
-{% extends 'core/base.html' %}
+{% extends "core/base.html" %}
 {% block content %}
-{% load static %}
-<link rel="stylesheet" href="{% static 'swcs/style.css' %}">
-<link rel="stylesheet" href="{% static 'core/theme.css' %}">
-<h1>{{ character.character_name }}</h1>
-{% if character.character_image %}
-<img class="character-image" src="{{ character.character_image.url }}">
-{% else %}
-<img class="character-image" src="{% static 'swcs/NoCharImage.png' %}">
-{% endif %}  
-<p>{{ character.character_description }}</p>
-{% endblock %}
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'swcs/style.css' %}" />
+    <link rel="stylesheet" href="{% static 'core/theme.css' %}" />
+    <script src="{% static 'swcs/character.js' %}"></script>
+    <div class="character">
+        <div class="character-nactbar">
+            <form id="delete-form" method="post" action="{% url 'swcs:sw-character-delete' character.id %}">
+                {% csrf_token %}
+                <button type="button"
+                        class="nactbar-button"
+                        onclick="confirmDelete('{{ character.character_name }}')">
+                    Delete
+                </button>
+            </form>
+            {% comment %} Add button that redirects to edit page {% endcomment %}
+            <a href="{% url 'swcs:sw-character-edit' character.id %}">
+                <button class="nactbar-button">Edit</button>
+            </a>
+        </div>
+        <h1>{{ character.character_name }}</h1>
+        {% if character.character_image %}
+            <img class="character-image"
+                 alt="Character Image"
+                 src="{{ character.character_image.url }}"/>
+        {% else %}
+            <img class="character-image"
+                 alt="No Character Image"
+                 src="{% static 'swcs/NoCharImage.png' %}"/>
+        {% endif %}
+        <p>{{ character.character_description }}</p>
+    </div>
+{% endblock content %}
