--- a/swcs/templates/swcs/create_character.html
+++ b/swcs/templates/swcs/create_character.html
@@ -1,18 +1,18 @@
-{% extends 'core/base.html' %}
+{% extends "core/base.html" %}
 {% block content %}
 {% load static %}
-<link rel="stylesheet" href="{% static 'swcs/style.css' %}">
-<link rel="stylesheet" href="{% static 'core/theme.css' %}">
+<link rel="stylesheet" href="{% static 'swcs/style.css' %}" />
+<link rel="stylesheet" href="{% static 'core/theme.css' %}" />
 <script src="{% static 'swcs/create_character.js' %}"></script>
-<div id="create-character">
-<form method="POST" enctype="multipart/form-data">
+<div class="character">
+<form method="post" enctype="multipart/form-data">
 {% csrf_token %}
 <table>
     <thead>
         <td> Character Creation </td>
     </thead>
     <tbody>
-        {% for field in create_character %}
+        {% for field in form %}
         <tr><td>{{ field.label_tag }}</td><td>{{ field }}</td>
         </tr>
         {% endfor %}
@@ -23,4 +23,4 @@
 <button type="Submit">Create</button>
 </form>
 </div>
-{% endblock %}
+{% endblock content %}
